Bug 328919 - Keyboard key "Menu" does not work in list of search results
Summary: Keyboard key "Menu" does not work in list of search results
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.7.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2013-12-17 20:38 UTC by Cade
Modified: 2020-02-10 10:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cade 2013-12-17 20:38:10 UTC
Keyboard key "Menu" does not work in list of search results

Reproducible: Always

Steps to Reproduce:
1. Open Krusader.
2. Menu Tools -> Search.
3. Current tab: "General".
4. Enter something text in "Search for" field.
5. Press "Search" button.
6. Current tab: "Results".
7. Press "Menu" key.
Actual Results:  
Nothing happens.

Expected Results:  
Open context menu.
Comment 1 Toni Asensi Esteve 2018-06-17 21:32:43 UTC
It still happens nowadays.
Comment 2 Davide Gianforte 2020-02-10 10:13:50 UTC
Git commit 2bebb93c944ca25f9ddef8b8a509823666ca508d by Davide Gianforte.
Committed on 10/02/2020 at 10:12.
Pushed by gengisdave into branch 'master'.

Add QT::KeyMenu action to search results

In the Search result list, you can right click for the context menu (view, edit, compare, copy), but the Menu key from the keyboard does not work.

This patch add this functionality.

The popup menu is drawn based on the mouse pointer position.

FIXED: [ 328919 ] Keyboard key "Menu" does not work in list of search results

Differential Revision: https://phabricator.kde.org/D23924

M  +3    -0    krusader/Search/krsearchdialog.cpp

https://commits.kde.org/krusader/2bebb93c944ca25f9ddef8b8a509823666ca508d